# newversion

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  setup.cfg
.github/workflows/: on_push.yml  on_push_coverage.yml  on_release.yml
docs/: MODULES.md  README.md  _config.yml
docs/newversion/: cli_parser.md  constants.md  executor.md  index.md  main.md  module.md  version.md
newversion/: __init__.py  __main__.py  cli_parser.py  constants.py  executor.py  main.py  version.py
scripts/: before_commit.sh  bump_version.sh  docs.sh
tests/: test_main.py  test_version.py
