[tool.poetry]
name = "newversion"
version = "0.1.0"
description = "Version manager compatible with packaging"
authors = ["Vlad Emelianov <volshebnyi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
packaging = "^20.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
handsdown = "^0.3.9"
pytest = "^6.2.2"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
ignore_errors = true
omit = [
    "tests/*",
]
