[metadata]
name = newversion
version = 0.1.0
author = Vlad Emelianov
author-email = vlad.emelianov.nz@gmail.com
home-page = https://github.com/vemel/mypy_boto3_builder
description = Version manager compatible with packaging
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = version pep440
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://newversion.readthedocs.io/en/latest/
    Source = https://github.com/vemel/newversion
    Tracker = https://github.com/vemel/newversion/issues

[options]
zip_safe = True
include_package_data = True
packages = find:

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,test_*.py
ignore = E203,W503,E501
max-complexity = 14

[mypy]
python_version = 3.8
warn_return_any = False
warn_unused_ignores = False
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
ignore_errors = False

[mypy-tests.*]
ignore_errors = True
