[metadata]
name = newversion
version = 0.1.1

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts = 
    newversion = newversion.main:main_cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,test_*.py
ignore = E203,W503,E501
max-complexity = 14

[mypy]
python_version = 3.8
warn_return_any = False
warn_unused_ignores = False
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
ignore_errors = False

[mypy-tests.*]
ignore_errors = True
